Fix mobile navbar overflow

--- a/test_app/static/test_app/css/style.css
+++ b/test_app/static/test_app/css/style.css
@@ -42,6 +42,7 @@ body {
         position: absolute;
         top: 60px;
         right: 0;
+        width: 100%;
         background: #1f2937;
         flex-direction: column;
         width: 200px;
